remove html boiler

--- a/popup.html
+++ b/popup.html
@@ -10,18 +10,7 @@
         <h1>StreamChats Logo</h1>
       </div>
       <div class="chatbox__main">
-        <div class="main__messages">
-          <div class="messages__message self">
-            <span class="message__name">Test Name: </span>
-            <span class="message__text">This is a test message from you</span>
-            <span class="message__save">Save Message</span>
-          </div>
-          <div class="messages__message other">
-            <span class="message__name">Test Name: </span>
-            <span class="message__text">This is a test message from else</span>
-            <span class="message__save">Save Message</span>
-          </div>
-        </div>
+        <div class="main__messages"></div>
         <form class="messages_form">
           <input name="message" id="message" type="text" />
           <button class="message__send" type="submit">Send</button>
