--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,13 @@
         <h1>StreamChats Logo</h1>
       </div>
       <div class="chatbox__main">
-        <div class="main__messages"></div>
+        <div class="main__messages">
+          <div class="messages__message">
+            <span class="message__name">This is a test message</span
+            ><span class="message__text">username@testcompany.com</span>
+            <button class="message__save">Save</button>
+          </div>
+        </div>
         <form class="messages_form">
           <input name="message" id="message" type="text" />
           <button class="message__send" type="submit">Send</button>
