Allow for local send message to appear in chat

--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,8 @@
       <div class="chatbox__main">
         <div class="main__messages">
           <div class="messages__message">
-            <span class="message__name">This is a test message</span
-            ><span class="message__text">username@testcompany.com</span>
+            <span class="message__name">username@testcompany.com</span
+            ><span class="message__text">This is a test message</span>
             <button class="message__save">Save</button>
           </div>
         </div>
