add socket.io functionaltiy

--- a/popup.html
+++ b/popup.html
@@ -26,7 +26,8 @@
         <p><sup>&copy;</sup> 2020 StreamChats</p>
       </div>
     </div>
-
+    <script src="socket.io.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
