--- a/popup.html
+++ b/popup.html
@@ -11,11 +11,12 @@
       </div>
       <div class="chatbox__main">
         <div class="main__messages">
-          <div class="messages__message">
+          <!-- UNCOMMENT THIS FOR TESTING
+            <div class="messages__message">
             <span class="message__name">username@testcompany.com</span
             ><span class="message__text">This is a test message</span>
             <button class="message__save">Save</button>
-          </div>
+          </div> -->
         </div>
         <form class="messages_form">
           <input name="message" id="message" type="text" />
